# atlas-api

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
api/: __init__.py  auth.py  deps.py  main.py  models.py  settings.py
docs/: ARCHITECTURE.md
infra/: .env.example  Dockerfile  docker-compose.yaml  nginx.conf
scripts/: cleanup.sh  run_local.sh
worker/: __init__.py  tasks.py
worker/pipeline/: export.py  openmvg.py  openmvs.py  postproc.py  sam_mask.py
